--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -21,9 +21,9 @@ Copyright @copyright{} 2002, 2003, 2004 Simon Josefsson.
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.2 or
 any later version published by the Free Software Foundation; with the
-Invariant Sections being "Commercial Support", no Front-Cover Texts,
+Invariant Sections being ``Commercial Support'', no Front-Cover Texts,
 and no Back-Cover Texts.  A copy of the license is included in the
-section entitled "GNU Free Documentation License".
+section entitled ``GNU Free Documentation License''.
 @end quotation
 @end copying
 
