--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-GNU SASL NEWS -- history of user-visible changes.               -*- outline -*-
+GNU SASL NEWS -- History of user-visible changes.               -*- outline -*-
 Copyright (C) 2002, 2003, 2004 Simon Josefsson
 See the end for copying conditions.
 
