--- a/lib/THANKS
+++ b/lib/THANKS
@@ -19,6 +19,7 @@ Tomas Ogren
 Wojciech Polak
 Sergey Poznyakoff
 Peter Prohaska
+Paul Romero
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
