--- a/lib/NEWS
+++ b/lib/NEWS
@@ -49,6 +49,10 @@ gsasl_client_callback_*,
 gsasl_server_callback_*: DEPRECATED.  Old callback set/get interface.
 gsasl_ctx_get: DEPRECATED.  Not useful, application callback now get both
   library and session context.
+Gsasl_init_function, Gsasl_done_function, Gsasl_code_function,
+Gsasl_start_function, Gsasl_step_function, Gsasl_finish_function: ADD.
+Gsasl_mechanism_functions, Gsasl_mechanism: ADD.
+gsasl_register: ADD.
 
 * Changes in 0.1.4 (released 2004-08-08)
 
