--- a/lib/NEWS
+++ b/lib/NEWS
@@ -8,12 +8,14 @@ See the end for copying conditions.
 
 ** Update of generic crypto layer.
 
-** Translation fixes.
+** Major internal overhaul, to get rid of all fixed size buffers.
 
 ** Now possible to write and register a new SASL mechanism externally.
 Implement the Gsasl_*_function interfaces, populate a Gsasl_mechanism
 struct with name of SASL mechanism and the function pointers, and
 call gsasl_register to register your new mechanism.
+
+** Translation fixes.
 
 ** API and ABI modifications.
 gsasl_encode, gsasl_decode: MODIFIED.  Now allocate the output parameter.
