--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ See the end for copying conditions.
 
 ** Update of gnulib files.
 
+** More self tests.
+
 ** Translation fixes.
 
 * Changes in 0.1.4 (released 2004-08-08)
