--- a/lib/NEWS
+++ b/lib/NEWS
@@ -24,14 +24,12 @@ This means the code now use strdup, which improve readability.
 gsasl_encode, gsasl_decode: MODIFIED.  Now allocate the output parameter.
 gsasl_encode_inline, gsasl_decode_inline: ADD, DEPRECATED.
   Same as the old gsasl_encode and gsasl_decode, to simplify conversion.
+
+Gsasl_callback: ADD.  New function prototype.
 gsasl_callback_set: ADD.  New functions.
 gsasl_callback: ADD.  New functions.
 GSASL_NO_CALLBACK, GSASL_NO_ANONYMOUS_TOKEN: ADD.  New error codes.
-Gsasl_property, GSASL_CLIENT_*, GSASL_SERVER_*: ADD.  New enumerated type.
-Gsasl_callback: ADD.  New function prototype.
-gsasl_property_set, gsasl_property_set_global,
-gsasl_property_get, gsasl_property_get_global,
-gsasl_property_fast, gsasl_property_fast_global: ADD.  New functions.
+
 Gsasl_client_callback_anonymous,
 Gsasl_client_callback_authentication_id,
 Gsasl_client_callback_authorization_id,
@@ -57,12 +55,24 @@ Gsasl_server_callback_maxbuf,
 Gsasl_server_callback_cipher: DEPRECATED.  Old callback function prototypes.
 gsasl_client_callback_*,
 gsasl_server_callback_*: DEPRECATED.  Old callback set/get interface.
-gsasl_ctx_get: DEPRECATED.  Not useful, application callback now get both
-  library and session context.
+
+Gsasl_property, GSASL_CLIENT_*, GSASL_SERVER_*: ADD.  New enumerated type.
+gsasl_property_set, gsasl_property_set_global,
+gsasl_property_get, gsasl_property_get_global,
+gsasl_property_fast, gsasl_property_fast_global: ADD.  New functions.
+
+gsasl_application_data_get, gsasl_application_data_set: DEPRECATED.
+gsasl_appinfo_get, gsasl_appinfo_set: DEPRECATED.
+gsasl_callback_hook_get, gsasl_callback_hook_set: ADD.  Replaces
+  previous functions.
+
 Gsasl_init_function, Gsasl_done_function, Gsasl_code_function,
 Gsasl_start_function, Gsasl_step_function, Gsasl_finish_function: ADD.
 Gsasl_mechanism_functions, Gsasl_mechanism: ADD.
 gsasl_register: ADD.
+
+gsasl_ctx_get: DEPRECATED.  Not useful, application callback now get both
+  library and session context.
 
 * Changes in 0.1.4 (released 2004-08-08)
 
